--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/rad.png" />
+    <script type="text/javascript" src="%PUBLIC_URL%/Config.js" ></script>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -14,4 +15,7 @@
   <body class="rtl">
     <div id="root"></div>
   </body>
+  <script>
+  window.RenderApp(config);
+  </script>
 </html>
