--- a/public/index.html
+++ b/public/index.html
@@ -20,4 +20,7 @@
   <script>
   window.RenderApp(config);
   </script>
+  <!--<script src="stimulsoft/stimulsoft.reports.js"></script>-->
+  <!--<script src="stimulsoft/stimulsoft.viewer.js"></script>-->
+  <!--<script src="stimulsoft/stimulsoft.designer.js"></script>-->
 </html>
